# sketches

./: .dockerignore  .eslintrc  .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .prettierrc.json  Cargo.toml  Dockerfile  LICENSE  README.md  build.js  build.mjs  dev-server.js  docker-compose.yml  gulpfile.js  package-lock.json  package.json  snowpack.config.js  tsconfig.json  tslint.json  vite.config.js  webpack.config.js  webpack.dev.js
.devcontainer/: devcontainer.json
functions/assets/: [[args]].ts
projects/playground/: dev-server.js  package.json  snowpack.config.js  tsconfig.json  webpack.config.js  webpack.dev.js
projects/playground/public/: .gitignore
public/: package.json  shared.min.js  shared.min.js.map
public/_snowpack/pkg/: geo-3d-box.js  gl-matrix.js  import-map.json
public/aquarell/: index.html  main.js  main.js.map
public/assets/: 0.94b42511.js  0.de11ecf6.js  1.02a3768a.js  1.a02140c4.js  10.24ec024e.js  10.f4e14b05.js  11.a1049f4f.js  11.d7469e8d.js  12.15554285.js  12.1b9f2798.js  13.af2145b8.js  13.edab657b.js  14.ab55de5b.js  15.833c38e1.js  16.93d6120b.js  16.bbf430a7.js  17.542bb5d2.js  17.7ec33daa.js  18.e7b24edc.js  19.4cc89f98.js  19.fe402cd6.js  2.27e961b1.js  2.8abe2a73.js  2.debd0dca.js  20.a3ea9e4d.js  21.6b87d075.js  21.fffe9514.js  22.3ed88108.js  22.7f787cf5.js  23.70e903f6.js  23.f0bb2686.js  24.02e1b33f.js  24.d1928c41.js  25.426d0ba1.js  25.c12102e5.js  26.61a37c43.js  26.648a9849.js  27.8377259e.js  28.05e0be73.js  28.f73f10e1.js  (+43 more)
public/boilerplate/: context.js  geometries.js  index.html  index.js  main.js  main.js.map  renderer.js  state.js
public/boilerplate/glsl/: base.frag.js  base.vert.js
public/colorwalls/: main.js  main.js.map
public/drafts/homage/: graph.js  index.html  main.js
public/drafts/tiles/: index.html
public/examples/homage/: graph.js  main.js
public/experiments/aquarell/: context.js  index.html  index.js  paint.js  renderer.js
public/experiments/area-light/: context.js  index.html  index.js  main.js  main.js.map  renderer.js  state.js
public/experiments/convex-hull/: index.html  index.js  main.js  main.js.map  nodes.js
public/experiments/game-of-life/: index.html  index.js  main.js  main.js.map  paint.js  renderer.js
public/experiments/graph-sort/: main.js  main.js.map
public/experiments/squeegee/: context.js  index.html  index.js  renderer.js  shaders.js  state.js
public/experiments/textures/: index.html  index.js  main.js  main.js.map  plane-shaders.js  renderer.js  shaders.js
public/homage/: index.html  main.js  main.js.map
public/shared/js/: jspm.config.js
public/tests/hmr/: index.html  index.js  module1.js  module2.js
public/tests/import-meta/: index.html  index.js  module1.js  module2.js
public/tests/pointer-events/: index.html  index.js
public/tiles/: index.html  main.js  main.js.map
public/works/colorwalls/: context.js  geometries.js  index.html  index.js  renderer.js  state.js
public/works/homage/: context.js  geometries.js  index.html  index.js  renderer.js  shaders.js
public/works/tiles/: context.js  index.html  index.js  renderer.js  viewport.js
scripts/: watch-rust.js
src/: project.d.ts
src/aquarell/: context.ts  index.ts  paint.ts  renderer.ts
src/boilerplate/: camera.ts  context.ts  events.ts  flow.ts  geometries.ts  index.ts  renderer.ts  shaders.ts  state.ts  types.ts  viewport.ts
src/boilerplate/graph/: events.ts
src/colorwalls/: camera.ts  context.ts  events.ts  geometries.ts  index.ts  renderer.ts  shaders.ts  state.ts
src/colorwalls/glsl/: ground.frag  ground.vert  walls.frag
src/colorwalls/graph/: events.ts
src/colorwallsFlow/: flow.ts
src/experiments/area-light/: flow.ts  (+4 more)
src/homage/: camera.ts  context.ts  effects.ts  events.ts  flow.ts  geometries.ts  index.ts  nodes.json  renderer.ts  shaders.ts  videos.ts  viewport.ts
src/public/: index.html
src/public/experiments/paintings/tile-fields/crate/: Cargo.toml
src/public/experiments/paintings/tile-fields/crate/pkg/: tvs_sketch_tile_fields.d.ts  tvs_sketch_tile_fields.js  tvs_sketch_tile_fields_bg.wasm  tvs_sketch_tile_fields_bg.wasm.d.ts
src/public/experiments/paintings/tile-fields/crate/src/: geom.rs  lib.rs  painting.rs
src/public/experiments/strokes/stroke-wasm1/crate/: Cargo.toml
src/public/experiments/strokes/stroke-wasm1/crate/pkg/: tvs_sketch_strokes.d.ts  tvs_sketch_strokes.js  tvs_sketch_strokes1.js  tvs_sketch_strokes1_bg.wasm  tvs_sketch_strokes1_bg.wasm.d.ts  tvs_sketch_strokes_bg.wasm  tvs_sketch_strokes_bg.wasm.d.ts
src/public/experiments/strokes/stroke-wasm1/crate/src/: lib.rs
src/public/experiments/wasm/projection/crate/: Cargo.toml
src/public/experiments/wasm/projection/crate/pkg/: tvs_sketch_projection.d.ts  tvs_sketch_projection.js  tvs_sketch_projection_bg.wasm  tvs_sketch_projection_bg.wasm.d.ts
src/public/experiments/wasm/projection/crate/src/: geom.rs  lib.rs  state.rs
src/shared-utils/: animation.ts  fp.ts  frameLoop.ts  painterState.ts  reload.ts  scheduler.ts  transitions.ts
src/shared-wasm/: Cargo.toml
src/tiles/: camera.ts  context.ts  events.ts  flow.ts  index.ts  renderer.ts  state.ts  viewport.ts
(+805 files in other folders)
