[workspace]

members = [
	"projects/libs-wasm",
	"src/public/experiments/wasm/balls/crate",
	"src/public/experiments/wasm/projection/crate",
	"src/public/experiments/wasm/ray-tracing/crate",
	"src/public/experiments/wasm/ssao/crate",
	"src/public/experiments/strokes/stroke-wasm1/crate",
]

[workspace.dependencies]
tvs-libs = { path = "projects/libs-wasm" }
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
bytemuck = { version = "1.2.0", features = ["derive"] }
palette = '0.7.2'
console_error_panic_hook = "0.1.7"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true      # this makes all the #[inline] anotation unneccessary
