[package]
name = "tvs-sketch-tile-fields"
version = "0.1.0"
authors = ["Thomas Gorny <thomas.gorny@pm.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]

tvs-libs.workspace = true
bytemuck.workspace = true
serde.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
serde-wasm-bindgen.workspace = true

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { workspace = true, optional = true }
