[package]
name = "tvs-sketch-strokes"
version = "0.1.0"
authors = ["Thomas Gorny <thomas.gorny@pm.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
tvs-libs = { path = "../../../../../../projects/libs-wasm" }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["console"] }
js-sys = "0.3.64"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }
approx = "0.5.1"
# palette = '0.5'
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.24.0", features = [
	"bytemuck",
	"serde",
	"rand",
	"approx",
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true      # this makes all the #[inline] anotation unneccessary
