[package]
name = "tvs-sketch-projection"
version = "0.1.0"
authors = ["Thomas Gorny <thomas.gorny@pm.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
tvs-libs.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["console"] }
js-sys.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
glam.workspace = true
rand.workspace = true
getrandom.workspace = true
approx.workspace = true
bytemuck.workspace = true

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true
